--- a/index.html
+++ b/index.html
@@ -75,21 +75,21 @@
         <div class="container">
 
           <figure class="music-banner">
-            <img src="./assets/images/poster-1.jpg" width="800" height="800" alt="Happy Moments (Master) Album Poster"
+            <img src="./assets/images/poster-1.jpg" width="800" height="800" alt="Gone Album Poster"
               class="img-cover" data-player-banner>
           </figure>
 
           <div class="music-content">
 
-            <h2 class="headline-sm" data-title>Happy Moments (Master)</h2>
+            <h2 class="headline-sm" data-title>Gone</h2>
 
             <p class="label-lg label-wrapper wrapper">
-              <span data-album>No Spirit</span>
+              <span data-album>Gone</span>
 
-              <span data-year>2022</span>
+              <span data-year>2023</span>
             </p>
 
-            <p class="label-md artist" data-artist>No Spirit x Tonion</p>
+            <p class="label-md artist" data-artist>Gone</p>
 
             <div class="seek-control">
 
