--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
             <h2 class="headline-sm" data-title>Gone</h2>
 
             <p class="label-lg label-wrapper wrapper">
-              <span data-album>Gone</span>
+              <span data-album>Vexento</span>
 
               <span data-year>2023</span>
             </p>
 
-            <p class="label-md artist" data-artist>Gone</p>
+            <p class="label-md artist" data-artist>Vexento</p>
 
             <div class="seek-control">
 
