--- a/index.html
+++ b/index.html
@@ -183,4 +183,8 @@
 
 </body>
 
+     <marquee width="100%" direction="left" height="200%">
+  Selamat Menikmati Musicnya Guys Ya...
+    </marquee>
+
 </html>
