--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div class="top-bar-actions">
       <button class="btn-icon" data-playlist-toggler>
-        <span class="material-symbols-rounded">play_arrow</span>
+        <span class="material-symbols-rounded">play_circle</span>
       </button>
     </div>
 
